# openmun-ech

./: .gitignore  README.md  config.yaml.sample  pyproject.toml
src/openmun_ech/: __init__.py  config.py  finalize.py  i18n.py  specdoc.py  version_router.py
src/openmun_ech/core/: __init__.py  fields.py  model.py  namespace.py
tests/: README.md  __init__.py  conftest.py  test_api_exports.py  test_ech0006_permit.py  test_ech0007_municipality.py  test_ech0007_v6.py  test_ech0007_xsd_validation.py  test_ech0008_country.py  test_ech0008_xsd_validation.py  test_ech0010_address.py  test_ech0010_v6.py  test_ech0010_xsd_validation.py  test_ech0011_person_data.py  test_ech0011_xsd_validation.py  test_ech0020_base_delivery_roundtrip.py  test_ech0020_correction_events_roundtrip.py  test_ech0020_life_events_roundtrip.py  test_ech0020_movement_events_roundtrip.py  test_ech0020_xsd_validation.py  test_ech0021_person_additional.py  test_ech0021_v7.py  test_ech0021_v7_xsd_validation.py  test_ech0021_xsd_validation.py  test_ech0044_person_identification.py  test_ech0044_xsd_validation.py  test_ech0058_header.py  test_ech0058_v4_header.py  test_ech0058_xsd_validation.py  test_ech0097_organisation.py  test_ech0097_xsd_validation.py  test_ech0099_layer2_export.py  test_ech0099_roundtrip.py  test_ech0099_roundtrip_xsd_validation.py  test_ech0099_statistics_delivery.py  test_ech0099_xsd_validation.py  test_ech0129_authority_person.py  test_ech0129_base_types.py  test_ech0129_building.py  test_ech0129_cadastral.py  (+57 more)
tools/: ech_diff.py  minimize_ech0020.py  minimize_ech0099.py
(+77 files in other folders)
